Remove ordering from HTML data table. The ordering was conflicting with the one of the REST endpoint.

--- a/static/events.html
+++ b/static/events.html
@@ -27,6 +27,7 @@
             ajax: "/rest/lastEvents",
             paging: false,
             searching: false,
+            ordering: false,
             columns: [
                 {"data": "timestamp"},
                 {"data": "reader"},
